--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -14,4 +14,7 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script></head><body><div id="root"></div><script src="runtime~main.6ac4c33d73ae9704bbb9.bundle.js"></script><script src="vendors~main.8ae6d819a32f4b83c3c4.bundle.js"></script><script src="main.e470a01bb8e9b7b98079.bundle.js"></script></body></html>
+  }</script><style>#root[hidden],
+      #docs-root[hidden] {
+        display: none !important;
+      }</style></head><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.4ebc2e9d2f05096491e4.bundle.js"></script><script src="vendors~main.b69bfb5717aa575850c8.bundle.js"></script><script src="main.b855719f0303caa68ae9.bundle.js"></script></body></html>
